--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "turbo": "^2.0.6"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "dayjs": "^1.11.11"
   },
   "packageManager": "pnpm@9.1.2",
