--- a/artifacts/dashboard/karmada-dashboard-web.yaml
+++ b/artifacts/dashboard/karmada-dashboard-web.yaml
@@ -29,7 +29,7 @@ spec:
             - --bind-address=0.0.0.0
             - --dashboard-config-path=/config/dashboard-config.yaml
           name: karmada-dashboard-web
-          image: karmada/karmada-dashboard-web:main
+          image: lehuannhatrang/dcn-dashboard-web:v0.9
           imagePullPolicy: IfNotPresent
           env:
             - name: GIN_MODE
