--- a/ui/apps/dashboard/package.json
+++ b/ui/apps/dashboard/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.6",
     "@karmada/i18n-tool": "workspace:*",
     "@karmada/utils": "workspace:*",
     "@monaco-editor/react": "^4.6.0",
