--- a/artifacts/dashboard/karmada-dashboard-api.yaml
+++ b/artifacts/dashboard/karmada-dashboard-api.yaml
@@ -88,7 +88,7 @@ spec:
       volumes:
         - name: kubeconfig
           secret:
-            secretName: kubeconfig
+            secretName: kubeconfig-karmada-apiserver
 ---
 apiVersion: v1
 kind: Service
