--- a/artifacts/overlays/nodeport-mode/dashboard-config.yaml
+++ b/artifacts/overlays/nodeport-mode/dashboard-config.yaml
@@ -1,10 +1,7 @@
 docker_registries: []
 chart_registries: []
-# path_prefix: '/karmada'
 path_prefix: ''
-metrics_dashboards:
-  - name: 'Overview'
-    url: 'http://192.168.28.142:31984/d/efa86fd1d0c121a26444b636a3f509a8/kubernetes-compute-resources-cluster?orgId=1&from=now-1h&to=now&timezone=utc&var-datasource=default&var-cluster=&refresh=10s&shareView=public_dashboard'
+metrics_dashboards: []
 menu_configs:
   - path: /overview
     enable: true
@@ -76,6 +73,16 @@ menu_configs:
   - path: /node-manage
     enable: true
     sidebar_key: NODE-MANAGE
+  - path: /multicloud-custom-resource
+    enable: true
+    sidebar_key: MULTICLOUD-CUSTOM-RESOURCE
+    children:
+      - path: custom-resource-definition
+        enable: true
+        sidebar_key: CUSTOM-RESOURCE-DEFINITION
+      - path: custom-resource
+        enable: true
+        sidebar_key: CUSTOM-RESOURCE
   - path: /continuous-delivery
     enable: true
     sidebar_key: CONTINUOUS-DELIVERY
@@ -103,11 +110,14 @@ menu_configs:
         enable: true
         sidebar_key: KARMADA-CONFIG
       - path: helm
-        enable: true
+        enable: false
         sidebar_key: HELM
       - path: registry
-        enable: true
+        enable: false
         sidebar_key: REGISTRY
+      - path: monitoring-config
+        enable: true
+        sidebar_key: MONITORING-CONFIG
   - path: /advanced-config
     enable: false
     sidebar_key: ADVANCED-CONFIG
