Add openfga to artifacts

--- a/artifacts/overlays/nodeport-mode/dashboard-config.yaml
+++ b/artifacts/overlays/nodeport-mode/dashboard-config.yaml
@@ -2,6 +2,13 @@ docker_registries: []
 chart_registries: []
 path_prefix: ''
 metrics_dashboards: []
+# Add OpenFGA configuration
+authorization:
+  type: "openfga"
+  openfga:
+    api_url: "http://openfga-api.karmada-system.svc.cluster.local:8080"
+    store_id: ""  # This will need to be populated after creating a store
+    authorization_model_id: ""  # This will need to be populated after creating an authorization model
 menu_configs:
   - path: /overview
     enable: true
