--- a/artifacts/overlays/nodeport-mode/kustomization.yaml
+++ b/artifacts/overlays/nodeport-mode/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - ../../dashboard
+  - ../../openfga
 
 configMapGenerator:
   - name: karmada-dashboard-configmap
@@ -24,3 +25,21 @@ patches:
       - op: add
         path: /spec/ports/0/nodePort
         value: 32000  # you can change the nodePort value
+  - target:
+      kind: Service
+      name: openfga-api
+      namespace: karmada-system
+      version: v1
+    patch: |-
+      - op: replace
+        path: /spec/type
+        value: NodePort
+      - op: add
+        path: /spec/ports/0/nodePort
+        value: 30081  # GRPC port
+      - op: add
+        path: /spec/ports/1/nodePort
+        value: 30080  # HTTP port
+      - op: add
+        path: /spec/ports/2/nodePort
+        value: 30082  # Playground port
