--- a/ui/apps/dashboard/package.json
+++ b/ui/apps/dashboard/package.json
@@ -31,6 +31,7 @@
     "@karmada/i18n-tool": "workspace:*",
     "@karmada/utils": "workspace:*",
     "@monaco-editor/react": "^4.6.0",
+    "@n8n/chat": "^0.27.1",
     "@tanstack/react-query": "^5.59.8",
     "@uidotdev/usehooks": "^2.4.1",
     "@xyflow/react": "^12.6.0",
