--- a/ui/apps/dashboard/package.json
+++ b/ui/apps/dashboard/package.json
@@ -34,6 +34,10 @@
     "@n8n/chat": "^0.27.1",
     "@tanstack/react-query": "^5.59.8",
     "@uidotdev/usehooks": "^2.4.1",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-search": "^0.15.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.0.0",
     "@xyflow/react": "^12.6.0",
     "antd": "^5.21.3",
     "axios": "^1.7.7",
